RbA Build/src/objects/Screen_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Max_Height_Fraction__c</fullName>
        <label>Max Height Fraction</label>
        <picklist>
            <picklistValues>
                <fullName>Even</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3/4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15/16</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Height_Inches__c</fullName>
        <label>Max Height Inches</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Width_Fraction__c</fullName>
        <label>Max Width Fraction</label>
        <picklist>
            <picklistValues>
                <fullName>Even</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3/4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7/8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15/16</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Width_Inches__c</fullName>
        <label>Max Width Inches</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Configuration</label>
        <referenceTo>Product_Configuration__c</referenceTo>
        <relationshipLabel>Screen Configurations</relationshipLabel>
        <relationshipName>Screen_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Screen_Type__c</fullName>
        <label>Screen Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fiberglass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiberglass (1/2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aluminum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aluminum (1/2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aluminum Dual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TruScene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TruScene (1/2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TruScene (Wood Veneer)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Screen Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>Screen Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Screen Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>